--- a/Week10Assessment/src/main/resources/templates/index.html
+++ b/Week10Assessment/src/main/resources/templates/index.html
@@ -1,49 +1,49 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>Add New Spell</title>
-<script>
-	function checkForm(form) 
-	{
-		// Checks if Name is empty
-		if(form.name.value == "") {
-			alert("Error: Please enter a spell name!");
-			form.name.focus();
-			return false;
-		}
-		// Checks if Level is empty
-		if(form.level.value == null) {
-			alert("Error: Please enter a spell level!");
-			form.level.focus();
-			return false;
-		}
-		// Checks if Tradition is empty
-		if(form.name.value == "") {
-			alert("Error: Please enter a spellcasting tradition!");
-			form.tradition.focus();
-			return false;
-		}
-		// Checks if Level is between 1 to 10
-		if(form.level.value < 1 || form.level.value > 10) {
-			alert("Error: Please enter a level between 1 to 10!");
-			form.level.focus();
-			return false;
-		}
+<!-- <!DOCTYPE html> -->
+<!-- <html xmlns:th="http://www.thymeleaf.org"> -->
+<!-- <head> -->
+<!-- <meta charset="UTF-8"> -->
+<!-- <title>Add New Spell</title> -->
+<!-- <script type="text/javascript"> -->
+// 	function checkForm() 
+// 	{
+// 		// Checks if Name is empty
+// 		if(document.spellForm.name.value == "") {
+// 			alert("Error: Please enter a spell name!");
+// 			document.spellForm.name.focus();
+// 			return false;
+// 		}
+// 		// Checks if Level is empty
+// 		if(document.spellForm.level.value == null) {
+// 			alert("Error: Please enter a spell level!");
+// 			document.spellForm.level.focus();
+// 			return false;
+// 		}
+// 		// Checks if Tradition is empty
+// 		if(document.spellForm.tradition.value == "") {
+// 			alert("Error: Please enter a spellcasting tradition!");
+// 			document.spellForm.tradition.focus();
+// 			return false;
+// 		}
+// 		// Checks if Level is between 1 to 10
+// 		if(document.spellForm.level.value < 1 || document.spellForm.level.value > 10) {
+// 			alert("Error: Please enter a level between 1 to 10!");
+// 			document.spellForm.level.focus();
+// 			return false;
+// 		}
 		
-		return true;
-	}
-</script>
-</head>
-<body>
-	<form th:object="${newSpell}" th:action="@{/update/{id}(id=${newContact.id})}" method='POST' onsubmit="return checkForm(this)">
-		Name: <input name="name" type="text" size="20" th:field="*{name}"><br/>
-		Level: <input name="level" type="number" th:field="*{level}"><br/>
-		Tradition: <input name="tradition" type="text" size="20" th:field="*{tradition}"><br/>
-		Cantrip: <input name="cantrip" type="checkbox" th:field="*{cantrop}"><br/>
+// 		return (true);
+// 	}
+<!-- </script> -->
+<!-- </head> -->
+<!-- <body> -->
+<!-- 	<form name="spellForm" th:object="${newSpell}" th:action="@{/update/{id}(id=${newContact.id})}" method='POST' onsubmit="checkForm()"> -->
+<!-- 		Name: <input name="name" type="text" size="20" th:field="*{name}"><br/> -->
+<!-- 		Level: <input name="level" type="number" th:field="*{level}"><br/> -->
+<!-- 		Tradition: <input name="tradition" type="text" size="20" th:field="*{tradition}"><br/> -->
+<!-- 		Cantrip: <input name="cantrip" type="checkbox" th:field="*{cantrop}"><br/> -->
 		
-		<input name="submit" type="submit" value="value">
-	</form>
-	<a href="viewAll">View all Spells</a>
-</body>
-</html>
+<!-- 		<input name="submit" type="submit" value="value"> -->
+<!-- 	</form> -->
+<!-- 	<a href="viewAll">View all Spells</a> -->
+<!-- </body> -->
+<!-- </html> -->
